--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>გამოიცანი სიტყვა - Wordle ქართულად</title>
+    <title>გამოიცანი დღის სიტყვა - Wordle ქართულად</title>
     <meta name="description" content="გამოიცანი სიტყვა არის Wordle-ს ქართული ვარიანტი">
 
     <!-- FB Meta Tags -->
     <meta property="og:url" content="https://wordle.ge">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="WORDLE - ქართულად">
-    <meta property="og:description" content="გამოიცანი სიტყვა არის Wordle-ს ქართული ვარიანტი">
-    <meta property="og:image" content="assets/img/wordle_ge_1200x630.png">
+    <meta property="og:title" content="გამოიცანი დღის სიტყვა - WORDLE ქართულად">
+    <meta property="og:description" content="გამოიცანი დღის სიტყვა არის Wordle-ს ქართული ვარიანტი">
+    <meta property="og:image" content="https://wordle.ge/assets/img/wordle_ge.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="wordle.ge">
 
     <meta name="theme-color" content="#6aaa64" />
-    <link href="assets/img/logo.png" rel="icon shortcut" sizes="3232" />
-    <link href="assets/img/logo_small.png" rel="apple-touch-icon" />
-    <link rel="icon" href="/favicon.ico" />
+    <link href="https://wordle.ge/assets/img/logo.png" rel="icon shortcut" sizes="3232" />
+    <link href="https://wordle.ge/assets/img/logo_small.png" rel="apple-touch-icon" />
+    <link rel="icon" href="https://wordle.ge/favicon.ico" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T6K41VSFNB"></script>
